Fix Explore and Search pages on small screens

--- a/addons/scratch3to2/explore_and_search.css
+++ b/addons/scratch3to2/explore_and_search.css
@@ -11,9 +11,11 @@
   background-color: transparent;
   box-shadow: none;
 }
-.outer .tabs {
-  /* Search page uses em instead of rem */
-  width: 58.75rem;
+@media (min-width: 942px) {
+  .outer .tabs {
+    /* Search page uses em instead of rem */
+    width: 58.75rem;
+  }
 }
 .tabs {
   background-color: transparent;
